We have notifications working :D